--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,11 +6,11 @@
         xmlns:local="clr-namespace:Auto_Shutdown_vb"
         xmlns:My="clr-namespace:Auto_Shutdown_vb.My" x:Name="window" x:Class="MainWindow"
         mc:Ignorable="d"
-        Title="自动关机" Width="400" HorizontalContentAlignment="Center" Height="350">
+        Title="自动关机" Width="400" HorizontalContentAlignment="Center" Height="310" MinWidth="350" MinHeight="200">
     <Window.Resources>
         <Storyboard x:Key="OnLoaded1"/>
     </Window.Resources>
-    <Grid x:Name="grid0" ShowGridLines="True" Height="320">
+    <Grid x:Name="grid0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -19,8 +19,8 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Slider x:Name="slider模式选择" HorizontalAlignment="Left" Margin="80,6,0,2" Width="70" Maximum="1" Cursor="Hand" SmallChange="1" AutoToolTipPlacement="TopLeft"/>
-        <ProgressBar x:Name="PB分" Height="10" Margin="0" Grid.Row="1" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=grid0, Mode=OneWay}" Value="33" Maximum="59"/>
-        <ProgressBar x:Name="PB秒" HorizontalAlignment="Left" Height="10" Margin="0,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=grid0, Mode=OneWay}" AutomationProperties.HelpText="秒" Value="35" Maximum="59"/>
+        <ProgressBar x:Name="PB分" Height="10" Margin="0" Grid.Row="1" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=grid0, Mode=OneWay}" Value="33" Maximum="59" Background="#FF838383" BorderBrush="{x:Null}" Foreground="#FF0614B0"/>
+        <ProgressBar x:Name="PB秒" HorizontalAlignment="Left" Height="10" Margin="0,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=grid0, Mode=OneWay}" AutomationProperties.HelpText="秒" Value="35" Maximum="59" Background="#FF717171" Foreground="#FF00FF2F" BorderBrush="{x:Null}"/>
         <GroupBox x:Name="groupBox时间" Header="关机时间" Margin="0" Grid.Row="2" Height="150" VerticalAlignment="Top">
             <Grid Margin="0" Width="250" Background="#FFC7C7C7" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Grid.RowDefinitions>
@@ -40,17 +40,11 @@
                 <Button x:Name="BT4" Content="-" Margin="0" Grid.Row="2" FontSize="21.333" HorizontalAlignment="Center" VerticalAlignment="Center" Width="40" Height="30" Grid.Column="1"/>
                 <Button x:Name="BT5" Content="+" Margin="0" Grid.Row="0" FontSize="21.333" HorizontalAlignment="Center" VerticalAlignment="Center" Width="40" Height="30" Grid.Column="2"/>
                 <Button x:Name="BT6" Content="-" Margin="0" Grid.Row="2" FontSize="21.333" HorizontalAlignment="Center" VerticalAlignment="Center" Width="40" Height="30" Grid.Column="2"/>
-
-
-
             </Grid>
         </GroupBox>
-        <Button x:Name="BT0" Content="开始" HorizontalAlignment="Center" Height="50" Margin="0" Grid.Row="3" VerticalAlignment="Center" Width="150" FontSize="32"/>
+        <Button x:Name="BT0" Content="开始" HorizontalAlignment="Center" Height="50" Margin="0" Grid.Row="3" VerticalAlignment="Top" Width="150" FontSize="32"/>
         <Label x:Name="label倒计时模式" Content="倒计时模式" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" FontSize="13" Width="80" HorizontalContentAlignment="Right" Height="30" FontWeight="Bold" Foreground="Red"/>
         <Label x:Name="label定时模式" Content="定时模式" HorizontalAlignment="Left" Margin="150,0,0,0" FontSize="13.333"/>
-        <StatusBar Margin="0" Grid.Row="4" Width="{Binding ActualWidth, ElementName=grid0, Mode=OneWay}" Height="30">
-            <Label x:Name="label状态栏" Content="本地时间：2020年03月23日 19：33：55"/>
-        </StatusBar>
-
+        <Label x:Name="label状态栏" Content="本地时间：2020年03月23日 19：33：55" Grid.Row="3" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
